# Monte-Carlo-Tree-Search-Engine

./: .dockerignore  CMakeLists.txt  README.md  dockerfile  main.cpp  mcts.cpp  mcts.h  package-lock.json  package.json  srv.js
frontend/: App.css  App.jsx  package-lock.json
frontend/src/: App.css  App.jsx
